[metadata]
name = termvideo-odd_odo
version = 1.0.0
author = Om Duggineni
author_email = om.psnom@gmail.com
description = A simple script that displays videos on your terminal!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/omduggineni/asciivideo
project_urls =
    Bug Tracker = https://github.com/omduggineni/asciivideo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src